--- a/Homework5/Homework5/Homework5.csproj
+++ b/Homework5/Homework5/Homework5.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
@@ -16,7 +17,6 @@
 
   <ItemGroup>
     <Folder Include="App Data\" />
-    <Folder Include="DAL\" />
   </ItemGroup>
 
 </Project>
